--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body {
     width: 60vh;        
     overflow: hidden;
     flex: 0 0 1;
-    min-width: 300px;
+    min-width: 360px;
 }
 .link {
     position: absolute;
@@ -79,7 +79,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 50px;
+    font-size: 60px;
     text-align: center;
     top: 25%;
     left: 50%;
@@ -88,7 +88,7 @@ a {
     color: white;
     background-color: rgba(0, 0, 0, 0.55);
     font-family: 'italianaregular';
-    padding: 0.5em 0 0.5em 0;
+    padding: 0.7em 0 0.7em 0;
 }
 img {
     position: absolute;
@@ -100,4 +100,90 @@ img {
 
 .sign-in {
     width: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f4f4;
+    justify-content: center;
+}
+.form-content {
+    background-color: white;
+    box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.384);;
+}
+.sign-in > div {
+    display: flex;
+}
+.text, .form, .form-btn {
+    margin-bottom: 2em;
+    margin-top: 3em;
+    margin-left: 2em;
+}
+.form {
+    flex-direction: column;
+    margin-left: 0;
+}
+.form div[class*="row"] {
+    display: flex;
+    font-size: 1em;
+    padding: 0;
+    border-radius: 1em;
+    font-family: sans-serif;
+}
+.form label {
+    padding: 0;
+    font-size: 0.7rem;
+    font-weight: bold;
+}
+label, input, button {
+    font-size: inherit;
+    padding: 0.2em;
+    padding-left: 0;
+    margin: 0;
+    margin-right: 4em;
+}
+label {
+    gap: 16px;
+}
+input {
+    width: 300px;
+    min-width: 0.5em;
+    padding-left: 5px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    font-size: 1em;
+    border-radius: 5px;
+    border: 2px solid #E5E7EB;
+}
+input:focus {
+    border: 1px solid blue;
+    outline: none;
+}
+input[type="password"]:invalid {
+    border: 1px solid red;
+}
+.form div[class*="input"] {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1em;
+}
+h2 {
+    font-size: 1.2em;
+    margin-bottom: 2em;
+    margin-top: 2em;
+    margin-left: 2em;
+    margin-inline-start: 32px;
+    margin-block-end: 2px;
+}
+.form-inputs {
+    padding-left: 2em;
+}
+.form-btn button {
+    background-color: #596D48;
+    color: white;
+    padding: 0.9em 3em;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.384);;
+}
+.form-btn button:hover {
+    background-color: hsl(92, 20%, 55%);
 }
