--- a/styles.css
+++ b/styles.css
@@ -25,19 +25,13 @@
 
 }
 
-html {
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-}
 *,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+        line-height: calc(1em + 0.5rem);
 }
 
 html, body {
@@ -46,8 +40,10 @@ html, body {
 }
 
 body {
-    font-family: 'robotoregular', serif;
+    font-family: 'robotoregular', san-serif;
     line-height: 1.5em;
+    -webkit-font-smoothing: antialiased;
+    letter-spacing: 0.01em;
 }
 
 .container {
@@ -80,6 +76,7 @@ a {
     justify-content: center;
     align-items: center;
     font-size: 60px;
+    font-weight: bold;
     text-align: center;
     top: 25%;
     left: 50%;
@@ -88,7 +85,7 @@ a {
     color: white;
     background-color: rgba(0, 0, 0, 0.55);
     font-family: 'italianaregular';
-    padding: 0.7em 0 0.7em 0;
+    padding: 0.5em 0 0.5em 0;
 }
 img {
     position: absolute;
@@ -108,14 +105,24 @@ img {
 .form-content {
     background-color: white;
     box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.384);;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 .sign-in > div {
     display: flex;
 }
-.text, .form, .form-btn {
+.text, .form, .form-btn, .log-in {
     margin-bottom: 2em;
     margin-top: 3em;
     margin-left: 2em;
+}
+.text {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-right: 5em;
+    margin-top: 0;
 }
 .form {
     flex-direction: column;
@@ -142,6 +149,7 @@ label, input, button {
 }
 label {
     gap: 16px;
+    color: #333333;
 }
 input {
     width: 300px;
@@ -156,6 +164,7 @@ input {
 input:focus {
     border: 1px solid blue;
     outline: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.384);;
 }
 input[type="password"]:invalid {
     border: 1px solid red;
@@ -166,24 +175,38 @@ input[type="password"]:invalid {
     margin-bottom: 1em;
 }
 h2 {
-    font-size: 1.2em;
-    margin-bottom: 2em;
-    margin-top: 2em;
+    font-size: 1.4em;
+    margin-bottom: 1em;
+    margin-top: 1em;
     margin-left: 2em;
     margin-inline-start: 32px;
-    margin-block-end: 2px;
+    color: #333333;
+    /* margin-block-end: 2px; */
 }
 .form-inputs {
     padding-left: 2em;
 }
 .form-btn button {
     background-color: #596D48;
+    font-weight: bold;
     color: white;
-    padding: 0.9em 3em;
+    padding: 0.85em 3em;
     border: 0;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.384);;
 }
 .form-btn button:hover {
     background-color: hsl(92, 20%, 55%);
+}
+.form a {
+    color: #596D48;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.2em;
+    padding-left: 0;
+    margin: 0;
+    margin-right: 4em;
+}
+.log-in {
+    margin-top: 0; 
 }
