--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ img {
 }
 
 .sign-in {
-    width: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: #f5f4f4;
@@ -134,6 +134,7 @@ img {
     padding: 0;
     border-radius: 1em;
     font-family: sans-serif;
+    width: 100%;
 }
 .form label {
     padding: 0;
